--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "rollup-plugin-serve": "^0.4.2"
   },
   "dependencies": {
+    "@turf/bearing": "^5.1.5",
+    "@turf/center": "^5.1.5",
+    "@turf/destination": "^5.1.5",
+    "@turf/distance": "^5.1.5",
     "leaflet": "^1.3.1"
   }
 }
