--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@turf/center": "^5.1.5",
     "@turf/destination": "^5.1.5",
     "@turf/distance": "^5.1.5",
+    "@turf/meta": "^6.0.1",
     "leaflet": "^1.3.1"
   }
 }
