--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "@turf/bearing": "^5.1.5",
-    "@turf/destination": "^5.1.5",
     "@turf/distance": "^5.1.5",
+    "@turf/invariant": "^6.0.1",
     "@turf/meta": "^6.0.1",
     "leaflet": "^1.3.1"
   }
