--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leaflet-truesize",
   "version": "1.0.1",
-  "description": "",
+  "description": "Leaflet plugin for creating projection aware draggable polygons and polylines.",
   "repository": {
     "type": "git",
     "url": "https://github.com/wbkd/leaflet-truesize.git"
@@ -14,8 +14,8 @@
     "build": "NODE_ENV=production rollup -c",
     "postbuild": "NODE_ENV=production rollup -c rollup.config.prod.js"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "webkid",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -37,6 +37,7 @@
     "@turf/destination": "^5.1.5",
     "@turf/distance": "^5.1.5",
     "@turf/meta": "^6.0.1",
-    "leaflet": "^1.3.1"
+    "leaflet": "^1.3.1",
+    "turf": "^3.0.14"
   }
 }
