--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "author": "webkid",
   "license": "MIT",
+  "peerDependencies": {
+    "leaflet": "^1.3.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -36,8 +39,6 @@
     "@turf/bearing": "^5.1.5",
     "@turf/distance": "^5.1.5",
     "@turf/invariant": "^6.0.1",
-    "@turf/meta": "^6.0.1",
-    "leaflet": "^1.3.1",
-    "turf": "^3.0.14"
+    "@turf/meta": "^6.0.1"
   }
 }
