--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
   "name": "leaflet-truesize",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Leaflet plugin for easily comparing sizes of geographical shapes.",
   "repository": {
     "type": "git",
     "url": "https://github.com/wbkd/leaflet-truesize.git"
   },
-  "main": "build/Leaflet.TrueSize.js",
+  "main": "dist/Leaflet.TrueSize.cjs.js",
+  "module": "dist/Leaflet.TrueSize.esm.js",
+  "browser": "dist/Leaflet.TrueSize.umd.js",
   "scripts": {
-    "start": "rollup -c -w",
-    "clean": "rimraf build/",
+    "dev": "rollup -c -w",
+    "clean": "rimraf dist/",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production rollup -c",
-    "postbuild": "NODE_ENV=production rollup -c rollup.config.prod.js"
+    "build": "NODE_ENV=production rollup -c"
   },
   "author": "webkid",
   "license": "MIT",
   "peerDependencies": {
-    "leaflet": "^1.3.1"
+    "leaflet": "^1.6.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.16.0",
-    "rollup": "^0.55.0",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-plugin-butternut": "^0.1.0",
-    "rollup-plugin-commonjs": "^8.2.6",
+    "@babel/core": "^7.8.0",
+    "@babel/preset-env": "^7.8.2",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "rollup": "^1.29.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-html": "^0.2.1",
-    "rollup-plugin-livereload": "^0.6.0",
-    "rollup-plugin-node-resolve": "^3.0.2",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-serve": "^0.4.2"
+    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-serve": "^1.0.1"
   },
   "dependencies": {
-    "@turf/bearing": "^5.1.5",
+    "@turf/bearing": "^6.0.1",
     "@turf/destination": "^6.0.1",
-    "@turf/distance": "^5.1.5",
-    "@turf/meta": "^6.0.1"
-  }
+    "@turf/distance": "^6.0.1",
+    "@turf/meta": "^6.0.2"
+  },
+  "files": [
+    "dist",
+    "src"
+  ]
 }
